[package]
name = "TaskVigil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
home = "0.5.5"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
